--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+
+<div class="min-h-screen bg-gray-50">
+  <app-navbar />
+  <div class="flex">
+    <app-sidebar />
+    <main class="flex-1 ml-64 p-6 bg-gray-50">
+      <div class="max-w-7xl mx-auto">
+        <router-outlet />
+      </div>
+    </main>
+  </div>
+</div>
+
+
