--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div class="flex">
     <app-sidebar />
     <main class="flex-1 ml-64 p-6 bg-gray-50">
-      <div class="max-w-7xl mx-auto">
+      <div class="max-w-7xl mx-auto mt-14">
         <router-outlet />
       </div>
     </main>
