--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="w-full flex justify-center items-center min-h-screen bg-indigo-50 py-8">
-  <!-- <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="bg-white shadow-xl rounded-lg p-8 space-y-6 w-full md:w-2/3 lg:w-1/2"> -->
+  <form [formGroup]="registerForm"  class="bg-white shadow-xl rounded-lg p-8 space-y-6 w-full md:w-2/3 lg:w-1/2">
     <h2 class="text-2xl font-bold text-gray-900 text-center mb-8">Register</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
@@ -134,5 +134,5 @@
         <a routerLink="/auth/login" class="text-blue-600 hover:text-blue-700 ml-2">Login</a>
       </div>
     </div>
-  <!-- </form> -->
+  </form>
  </div>
